Implement G729a end-end
